Opened 14 years ago

Closed 14 years ago

#1472 closed defect (fixed)

vf_deshake crash

Reported by: ami_stuff Owned by:
Priority: normal Component: avfilter
Version: git-master Keywords: deshake crash SIGSEGV
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

(gdb) r -i 160.jpg -vf deshake,boxblur-1:1 -f null -
Starting program: d:\mingw\msys\1.0\ffmpeg-head-ab7d6cb\ffmpeg_g.exe -i 160.jpg
-vf deshake,boxblur-1:1 -f null -
[New Thread 3184.0xc74]
ffmpeg version 0.10.2.git-ab7d6cb Copyright (c) 2000-2012 the FFmpeg developers
  built on May 30 2012 13:37:47 with gcc 4.6.1
  configuration: --disable-ffprobe --enable-gpl
  libavutil      51. 55.100 / 51. 55.100
  libavcodec     54. 23.100 / 54. 23.100
  libavformat    54.  6.101 / 54.  6.101
  libavdevice    54.  0.100 / 54.  0.100
  libavfilter     2. 77.100 /  2. 77.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[mjpeg @ 03bbcc40] Warning: not compiled with thread support, using thread emula
tion
Input #0, image2, from '160.jpg':
  Duration: 00:00:00.04, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: mjpeg, yuvj420p, 160x120 [SAR 72:72 DAR 4:3], 25 tbr, 25
 tbn, 25 tbc
[buffer @ 03bc1a40] w:160 h:120 pixfmt:yuvj420p tb:1/25 sar:72/72 sws_param:flag
s=2
[buffersink @ 03bc23c0] No opaque field provided
[deshake @ 03bc26a0] cx: -1, cy: -1, cw: -1, ch: -1, rx: 16, ry: 16, edge: 3 blo
cksize: 16 contrast: 125 search: 0
No such filter: 'boxblur-1:1'

Program received signal SIGSEGV, Segmentation fault.
avcodec_close (avctx=0x0) at libavcodec/utils.c:1653
1653        if (avcodec_is_open(avctx)) {
(gdb) bt
#0  avcodec_close (avctx=0x0) at libavcodec/utils.c:1653
#1  0x00b15967 in uninit (ctx=0x3bc26a0) at libavfilter/vf_deshake.c:421
#2  0x0041a76e in avfilter_free (filter=0x3bc26a0)
    at libavfilter/avfilter.c:449
#3  0x0041bb5b in avfilter_graph_parse (graph=0x3bc19e0,
    filters=0x3bc1df3 "", open_inputs_ptr=0x22dc3c,
    open_outputs_ptr=0x22dc38, log_ctx=0x0) at libavfilter/graphparser.c:591
#4  0x00406836 in configure_simple_filtergraph (fg=0x3bc1ee0) at ffmpeg.c:1043
#5  0x00409d2b in transcode_init () at ffmpeg.c:3151
#6  0x0040e029 in transcode () at ffmpeg.c:3410
#7  0x00b12f42 in main (argc=8, argv=0x3bc0dd0) at ffmpeg.c:5926
(gdb)

Attachments (1)

160.jpg (3.4 KB ) - added by ami_stuff 14 years ago.

Download all attachments as: .zip

Change History (4)

by ami_stuff, 14 years ago

Attachment: 160.jpg added

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavfilter
Keywords: deshake added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Carl Eugen Hoyos, 14 years ago

Keywords: crash SIGSEGV added

comment:3 by Stefano Sabatini, 14 years ago

Analyzed by developer: set
Resolution: fixed
Status: openclosed

Fixed in:

commit 1bb30d02959e530c72a0026047cb916883c031a7
Author: Stefano Sabatini <stefasab@gmail.com>
Date:   Thu Jun 21 17:00:52 2012 +0200

    lavfi/deshake: fix crash in uninit()
    
    Add NULL check on avctx before calling avcodec_close() on it.
    
    Fix trac ticket #1472.

Note: See TracTickets for help on using tickets.