lavfi/deshake: fix crash in uninit()

Add NULL check on avctx before calling avcodec_close() on it.

Fix trac ticket #1472.